modifying home and main

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,13 @@
-<h1>Example App: Home</h1>
+<div class = "container">
+	<div class="form-inline">
+	<h1 align="left">Login</h1>
+
+	<input type = "text" class = "form-control" id="regid" placeholder="Username">
+	<input type = "text" class = "form-control" id="regfirst" placeholder="Password">
+
+	<br><br>
+	<div>
+	<button type = "button" class= "btn btn-success btn-md" id="signin" method="post">Sign in</button>
+	<button type = "button" class= "btn btn-success btn-md" id="signup" method="post">Sign up</button>
+	</div>
+</div>
