--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,12 +2,13 @@
 	<div class="form-inline">
 	<h1 align="left">Login</h1>
 
-	<input type = "text" class = "form-control" id="regid" placeholder="Username">
-	<input type = "text" class = "form-control" id="regfirst" placeholder="Password">
+	<input type = "text" class = "form-control" id="reguser" placeholder="Username">
+	<input type = "password" class = "form-control" id="regpass" placeholder="Password">
 
 	<br><br>
 	<div>
-	<button type = "button" class= "btn btn-success btn-md" id="signin" method="post">Sign in</button>
+	<button type = "button" onclick="login()" class= "btn btn-success btn-md" id="signin" method="post">Sign in</button>
 	<button type = "button" class= "btn btn-success btn-md" id="signup" method="post">Sign up</button>
 	</div>
-</div>
+<script type="text/javascript" src="methods.js">
+</script>
