--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -8,7 +8,7 @@
 	<br><br>
 	<div>
 	<button type = "button" onclick="login()" class= "btn btn-success btn-md" id="signin" method="post">Sign in</button>
-	<button type = "button" class= "btn btn-success btn-md" id="signup" method="post">Sign up</button>
+	<button type = "button" class= "btn btn-success btn-md" id="signup" method="post" onclick="reg()">Sign up</button>
 	</div>
 <script type="text/javascript" src="methods.js">
 </script>
