finally with mysql

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,3 +1,12 @@
+<script type="text/javascript" src="methods.js">
+</script>
+<script>
+	var user=getCookie("status");
+    if (user == 1) {
+        window.location = '/my';
+    	}
+</script>
+
 <div class = "container">
 	<div class="form-inline">
 	<h1 align="left">Login</h1>
