added user name on dashboard

--- a/views/dash.handlebars
+++ b/views/dash.handlebars
@@ -8,6 +8,15 @@
 </script>
 <div class = "container" onload="checkCookie()">
 	<div class="form-inline">
-		<h1 align="left">Welcome</h1>
+	<h1 align="left">Welcome, </h1> <h1 id="user" onclick="myFunction()"></>
+		<script>
+			var user=getCookie("user");
+			document.getElementById('user').innerHTML = user;
+		</script>
+	<br>
+	<br>
+	<br>
 	<button type = "button" onclick="logout()" class= "btn btn-success btn-md" id="signin" method="post">Leave</button>
 </div>
+<script type="text/javascript" src="methods.js">
+</script>
