update alert boxes

--- a/views/dash.handlebars
+++ b/views/dash.handlebars
@@ -5,6 +5,7 @@
     if (user != 1) {
         window.location = '/';
     	}
+    document.title = 'Home'
 </script>
 <div class = "container" onload="checkCookie()">
 	<div class="form-inline">
@@ -16,7 +17,7 @@
 	<br>
 	<br>
 	<br>
-	<button type = "button" onclick="logout()" class= "btn btn-success btn-md" id="signin" method="post">Leave</button>
+	<button type = "button" onclick="logout()" class= "btn btn-success btn-md" id="leave" method="post">Leave</button>
 </div>
 <script type="text/javascript" src="methods.js">
 </script>
