--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -5,6 +5,7 @@
     if (user == 1) {
         window.location = '/my';
     	}
+    document.title = 'Registration'
 </script>
 <div class = "container">
 <form  method="post">
