--- a/views/upAcc.handlebars
+++ b/views/upAcc.handlebars
@@ -1,29 +1,27 @@
 <script type="text/javascript" src="methods.js">
 </script>
-<div class = "container">
-<form  method="post">
-	<div class="form-inline">
-	<div>
-	<table class="table">
-	<tr>
-	<th>
-	<h1 align="left" id = "uID"></h1>
-	</th>
-	<script>
-	var id=getCookie("id");
-	document.getElementById('uID').innerHTML = id;
-	</script>
-	<th>
-	<input type = "text" class = "form-control" id="newuser" placeholder="New Username">
-	<input type = "password" class = "form-control" id="newpass" placeholder="New Password">
-	</th>
-	<br><br>
-	<th>
-	<button type = "button" class= "btn btn-success btn-md" id="sr" onclick="upd()">Update</button>
-	</th>
-	</tr>
+<div class="login-form">
+	
+	<h1>Update</h1>
+	<div class="login-top">
+		<form method="POST" action="update">
+			<label style="color:white">ID of user to be Updated</label>
+			<div class="login-ic">
+				<input type="text" class="form-control" name="updateid" placeholder="Input ID" id="updateid" value=""/>
+				<div class="clear"> </div>
+			</div>
+			<label style="color:white">New Username Value</label>
+			<div class="login-ic">
+
+				<input type="text" class="form-control" name="newuser" id="newuser" placeholder="New Username" value=""/>
+				<div class="clear"> </div>
+			</div>
+			<div class="login-ic">
+				<div class="log-bwn" >
+					<input onclick="upd()" type="submit" class="btn btn-default" id="update-button" value="Update" > </input> 
+				</div>
+			</div>
+		</form>
 	</div>
-	</div>
-</form>
 <script type="text/javascript" src="methods.js">
 </script>
